[tool.poetry]
name = "apkInspector"
version = "1.1.7"
description = "apkInspector is a tool designed to provide detailed insights into the zip structure of APK files, offering the capability to extract content and decode the AndroidManifest.xml file."
authors = ["erev0s <projects@erev0s.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/erev0s/apkInspector"

packages = [
    { include = "apkInspector" },
    { include = "cli" },
]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.scripts]
apkInspector = "cli.apkInspector:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
